--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "classnames": "^2.2.6",
     "node-sass": "^4.12.0",
     "react": "^16.10.1",
     "react-bootstrap": "^1.0.0-beta.12",
@@ -38,6 +39,7 @@
     "@types/jest": "24.0.18",
     "@types/node": "12.7.8",
     "@types/react-dom": "16.9.1",
+    "@types/classnames": "^2.2.9",
     "@typescript-eslint/eslint-plugin": "^2.3.1",
     "@typescript-eslint/parser": "^2.3.1",
     "eslint-config-prettier": "^6.3.0",
