--- a/package.json
+++ b/package.json
@@ -1,54 +1,25 @@
 {
   "name": "chat",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "bootstrap": "^4.3.1",
-    "classnames": "^2.2.6",
-    "node-sass": "^4.12.0",
-    "react": "^16.10.1",
-    "react-bootstrap": "^1.0.0-beta.12",
-    "react-dom": "^16.10.1",
-    "react-scripts": "3.1.2",
-    "typescript": "3.6.3"
-  },
+  "version": "1.0.0",
+  "description": "",
+  "main": "./src/server.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "lint": "npx tsc --noEmit -p tsconfig.json && npx eslint ./src/**/*.ts"
+    "start": "npx lerna run start --stream --parallel",
+    "clean": "npx lerna clean",
+    "bootstrap": "npx lerna bootstrap --hoist",
+    "init": "npx lerna clean && npx lerna bootstrap --hoist",
+    "build": "npx lerna run build",
+    "lint": "lerna run lint --parallel --no-bail"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
+  "author": "Shevchenko",
+  "license": "ISC",
   "devDependencies": {
-    "@types/react": "^16.9.3",
-    "@types/jest": "24.0.18",
-    "@types/node": "12.7.8",
-    "@types/react-dom": "16.9.1",
-    "@types/classnames": "^2.2.9",
-    "@typescript-eslint/eslint-plugin": "^2.3.1",
-    "@typescript-eslint/parser": "^2.3.1",
-    "eslint-config-prettier": "^6.3.0",
-    "eslint-plugin-react-hooks": "^2.1.1",
-    "eslint-config-react": "^1.1.7",
-    "eslint-plugin-prettier": "^3.1.1",
-    "prettier": "^1.18.2",
-    "husky": "^3.0.5"
+    "lerna": "^3.18.4",
+    "husky": "^3.0.9"
   },
+  "workspaces": [
+    "packages/*"
+  ],
   "husky": {
     "hooks": {
       "pre-commit": "npm run lint"
